# Launcher

./: .gitignore  CMakeLists.txt  NEXT_STEPS.md  README.md
config/: locations.json
data/: system_aliases.json
scripts/: build.ps1  configure.ps1  run.ps1  smoke-test.ps1
src/app/: app.h  win_main.c
src/core/: base.c  base.h
src/platform/: catalog.c  catalog.h  catalog_aliases.c  catalog_aliases.h  catalog_watch.c  catalog_watch.h  everything_client.c  everything_client.h  icon_worker.c  icon_worker.h  launch.c  launch.h  shell_display_name.c  shell_display_name.h  start_menu_scan.c  start_menu_scan.h  system32_catalog.c  system32_catalog.h
src/render/: dx11_renderer.c  dx11_renderer.h
src/search/: fuzzy.c  fuzzy.h
src/text/: font_raster.c  font_raster.h  kb_text.c  kb_text.h
src/ui/: ctx_menu_icons.c  ctx_menu_icons.h  ui.c  ui.h
